# osscore

./: .gitignore  README.md  pyproject.toml
osscore/: __init__.py  core.py
