[tool.poetry]
name = "osscore"
version = "0.1.1"
description = ""
authors = ["similarface"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aliyun-python-sdk-sts = "^3.1.0"
oss2 = "^2.16.0"
aliyun-python-sdk-core = "^2.13.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
